// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/BadgeList > should accept background color for badges 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap gap-1"
    data-testid="tw-badge-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-10"
      data-testid="tw-badge"
    >
      badge-1
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-6"
      data-testid="tw-badge"
    >
      badge-important
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-10"
      data-testid="tw-badge"
    >
      badge-3
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/BadgeList > should highlight selected badges 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap gap-1"
    data-testid="tw-badge-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-0"
      data-testid="tw-badge"
    >
      badge-1
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-6"
      data-testid="tw-badge"
    >
      badge-important
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-primary-wash border-primary"
      data-testid="tw-badge"
    >
      badge-3
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/BadgeList > should highlight selected badges with custom background color 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap gap-1"
    data-testid="tw-badge-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-10"
      data-testid="tw-badge"
    >
      badge-1
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-6"
      data-testid="tw-badge"
    >
      badge-important
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-primary-wash border-primary"
      data-testid="tw-badge"
    >
      badge-3
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/BadgeList > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap gap-1"
    data-testid="tw-badge-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-0"
      data-testid="tw-badge"
    >
      badge-1
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-6"
      data-testid="tw-badge"
    >
      badge-important
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-0"
      data-testid="tw-badge"
    >
      badge-3
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/BadgeList > should render env badges 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
    data-testid="tw-badge-list"
  >
    <div
      class="flex flex-wrap gap-1"
    >
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-1"
        data-testid="tw-badge"
      >
        env=test-env
      </div>
    </div>
    <div
      class="flex flex-wrap gap-1"
    >
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-10"
        data-testid="tw-badge"
      >
        badge-1
      </div>
    </div>
  </div>
</DocumentFragment>
`;
